# iced-gtd

./: CLAUDE.md  Cargo.toml
.github/workflows/: build.yml
design_handoff_icedgtd/: IcedGTD.html  README.md  app.jsx  data.jsx  datepicker.jsx  inspector.jsx  sidebar.jsx  styles.css  tasklist.jsx
src/: app.rs  data.rs  date.rs  main.rs  models.rs  storage.rs
src/styles/: button.rs  container.rs  scrollable.rs  text_input.rs
src/theme/: mod.rs  oklch.rs
src/ui/: checkbox.rs  date_picker.rs  icons.rs  inspector.rs  main_pane.rs  mod.rs  progress_ring.rs  sidebar.rs  task_list.rs  task_row.rs  titlebar.rs
