[package]
name = "iced-gtd"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["canvas", "advanced", "lazy", "svg", "tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
palette = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["fs", "rt", "macros"] }
